big rewrite for username
